# misiones-carbon-analysis

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/data/: correlation.csv
src/misiones_carbon_analysis/: constants.py  informe.tex  main.ipynb  preprocessing copy.ipynb  preprocessing.ipynb
src/raw_data/gfw/: Misiones_Forest_Gain.tif.aux.xml  Misiones_Forest_Loss.tif.aux.xml  forest_loss__ha.csv  iguazu_treecover_loss__ha.csv  treecover_loss__ha.csv  treecover_loss_from_fires_by_region__ha.csv
src/raw_data/gfw/Incremento de cobertura arbórea/: treecover_gain_2000-2020__ha.csv
src/raw_data/gfw/Primary Forest loss in Misiones/: metadata.csv  treecover_extent_2000_in_primary_forests_2001_tropics_only__ha.csv
src/raw_data/gfw/Pérdida de cobertura arbórea en Iguazú, Misiones, Argentina/: metadata.csv  treecover_extent_2000__ha.csv
src/raw_data/gfw/Tree cover gain in Misiones/: treecover_gain_2000-2020_by_region__ha.csv
src/raw_data/gfw/Tree cover loss due to fires in Misiones, Argentina/: adm1_metadata.csv  adm2_metadata.csv  metadata.csv
src/raw_data/gfw/Tree cover loss in Misiones/: treecover_extent_2000__ha.csv
src/raw_data/mapbiomas/: misiones_forest_change.csv  misiones_forest_change2.csv  total_misiones_coverage.csv  treecover_by_year.csv
src/raw_data/metereological center/: BERNARDO DE IRIGOYEN AERO.txt  IGUAZU AERO.txt  OBERA.txt  POSADAS AERO.txt
src/raw_data/other/: co2_emissions_arg.csv
src/raw_data/trace/: forest-land-clearing_country_emissions.csv  forest-land-fires_country_emissions.csv  net-forest-land_country_emissions.csv
tests/: __init__.py
